<resources>
    <!-- Common -->
    <string name="app_name">ToDo</string>
    <string name="not">Нет</string>

    <!-- Authorization -->
    <string name="authorize">Войти</string>
    <string name="registration">Регистрация</string>

    <!-- Tasks -->
    <string name="my_tasks">Мои дела</string>
    <string name="tasks_done">Выполнено — %1$d</string>
    <string name="new_task">Новая задача</string>

    <!-- New task -->
    <string name="save">СОХРАНИТЬ</string>
    <string name="what_need_to_do">Что надо сделать…</string>
    <string name="importance">Важность</string>
    <string name="make_before">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="ready">Готово</string>
    <string name="cancel">Отмена</string>

    <string-array name="priority_array">
        <item>Нет</item>
        <item>Низкая</item>
        <item>!! Высокая</item>
    </string-array>

    <!-- Notifications -->
    <string name="notification_tasks_to_do_title">Важно</string>
    <string name="notification_task_to_do_text">Сегодня вам нужно сделать %1$s, не забудьте.</string>
    <string name="notification_channel_name">Уведомления</string>
    <string name="notification_channel_description">Канал уведомлений</string>

    <plurals name="tasks">
        <item quantity="one">%d задачу</item>
        <item quantity="few">%d задачи</item>
        <item quantity="many">%d задач</item>
        <item quantity="other">%d задачи</item>
    </plurals>
</resources>